miscTests/export_tests/invalid/functor.ml.actual
Invalid module export - must be constrained or literal